complete single play game part